--- a/docs/presentation/girlspowertech/girlspowertech.tex
+++ b/docs/presentation/girlspowertech/girlspowertech.tex
@@ -252,12 +252,80 @@
   \frametitle{AJAX Requests}
   \begin{center}
     \begin{tcolorbox}[title=\href{https://en.wikipedia.org/wiki/Ajax_(programming)}{AJAX Definition},colback=gray]
-      With Ajax, Web applications can send and retrieve data from a server asynchronously (in the background) without interfering with the display and behavior of the existing page.
+      With Ajax (Asynchronous JavaScript + XML), Web applications can send and retrieve data from a server asynchronously (in the background) without interfering with the display and behavior of the existing page.
     \end{tcolorbox}
     \begin{itemize}
     \item Send data back and forth in the background
     \item Execute commands based on the data you receive
+    \item This is why a page can update data on it's own
     \end{itemize}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Languages Used}
+  \framesubtitle{What do they do?}
+  \begin{center}
+    \begin{itemize}
+    \item JavaScript
+      \begin{itemize}
+        \item Modification and access to DOM (rendered page data)
+      \end{itemize}
+    \item JSON
+      \begin{itemize}
+        \item Configuration Files
+      \end{itemize}
+    \item Python
+      \begin{itemize}
+        \item Collect data and send commands
+      \end{itemize}
+    \end{itemize}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Terminology}
+  \framesubtitle{manifest.json}
+  \begin{center}
+    \begin{tcolorbox}[title=\href{https://developer.chrome.com/apps/manifest}{manifest.json definition},colback=gray]
+      Every app has a JSON formated manifest.json file, that provides important information.\\
+      \newline
+      This information includes:\\
+      \begin{itemize}
+      {\color{black}
+      \item permissions
+      \item project file names
+      \item project paths
+      \item other configuration options}
+      \end{itemize}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Terminology}
+  \framesubtitle{Command \& Control Server}
+  \begin{center}
+    \begin{tcolorbox}[title=\href{https://en.wikipedia.org/wiki/Botnet}{Command and Control Server Definition},colback=gray]
+      A computer controlled by an attacker or cybercriminal which is used to send commands to systems compromised by malware and receive stolen data from a target network.
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Terminology}
+  \framesubtitle{Hooking}
+  \begin{center}
+    \begin{tcolorbox}[title=\href{https://en.wikipedia.org/wiki/Hooking}{Hooking Definition},colback=gray]
+      In computer programming, hooking covers a range of techniques used to alter or augment the behavior of an operating system, of applications, or of other software components by intercepting function calls or messages or events passed between software components. Code that handles such intercepted function calls, events or messages is called a hook.
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Terminology}
+  \framesubtitle{Command \& Control Server}
+  \begin{center}
   \end{center}
 \end{frame}
 
