--- a/docs/handouts/girlspowertech/girlspowertech.tex
+++ b/docs/handouts/girlspowertech/girlspowertech.tex
@@ -50,7 +50,7 @@
     }\\
   \end{center}
   \begin{center}
-    \large\textbf{May 3, 2018}
+    \large\textbf{May 3, 2018}\\
   \end{center}
 \end{titlepage}
 
