--- a/docs/handouts/girlspowertech/girlspowertech.tex
+++ b/docs/handouts/girlspowertech/girlspowertech.tex
@@ -60,12 +60,8 @@
 
 \pagebreak
 
-\begin{abstract}
-  A Girls Power Tech 2018 Google Chrome Malware \& Botnet presentation and demo handout.
-\end{abstract}
-
 \section{Introduction}
-\tab In this handout we will cover the terminology and concepts in the presentation.\\
+\tab In this handout we will cover the terminology and concepts in the presentation for Chrome extension malware.\\
 
 \section{Disclaimer}\mbox{}\\
 \tab The tools and techniques covered in this handout can be dangerous and are being showing for educational purposes only
@@ -186,7 +182,70 @@ Only use these tools with / on systems you own or have written permission from t
 \end{tcolorbox}
 \tab You will now start to see events populate in the sever console.
 
+\pagebreak
+
+\section{Confirm Your Understanding}
+\tab Now that you have experienced how this malware works, please try to the best of your ability to answer the following questions. There are questions about your own personal interest in the technology field and these have no right or wrong answer. We really hope you enjoyed the material covered today.
+
+\subsection{Question 1}
+\paragraph{Should extensions be trusted even with legitimate company names? Explain why or why not.}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 2}
+\paragraph{If a website requests to install an extension to view the content of the page I would [insert answer]}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 3}
+\paragraph{Is it easy to make malicious extensions? Explain why or why not.}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\pagebreak
+
+\subsection{Question 4}
+\paragraph{What does (CnC or C\&C) stand for and why is it important to malware?}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 5}
+\paragraph{What does hooking mean when we are talking about malware?}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 6}
+\paragraph{Would you consider Cyber Security as a profession you are interested in? Explain why or why not.}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\pagebreak
+
+\subsection{Question 7}
+\paragraph{Is the technology industry providing enough resources for women at this time? Explain why or why not.}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 8}
+\paragraph{What did you like about the presentation today on Chrome extension malware?}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\subsection{Question 9}
+\paragraph{Is there anything we can improve on?}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\pagebreak
+
+\subsection{Question 10}
+\paragraph{Tell us a little about why you are interested in technology}\mbox{}\\
+\newline
+\framebox[\textwidth]{\rule{0pt}{80pt}}
+
+\pagebreak
+
 \section{Summary}
-\tab It is important to be aware of what extensions are installed in your browser as malicious extensions can exfiltrate your credentials, cookies, conversations as well as web history.
+\tab It is important to be aware of what extensions are installed in your browser as malicious extensions can exfiltrate your credentials, cookies, conversations as well as web history. Thank you all for participating, we hope that we have increased your awareness and interest in the Cyber security filed.
 
 \end{document}
