--- a/docs/handouts/girlspowertech/girlspowertech.tex
+++ b/docs/handouts/girlspowertech/girlspowertech.tex
@@ -239,7 +239,7 @@ Only use these tools with / on systems you own or have written permission from t
 \pagebreak
 
 \subsection{Question 10}
-\paragraph{Tell us a little about why you are interested in technology}\mbox{}\\
+\paragraph{Tell us a little about why you are interested in technology.}\mbox{}\\
 \newline
 \framebox[\textwidth]{\rule{0pt}{80pt}}
 
