--- a/docs/presentation/girlspowertech/girlspowertech.tex
+++ b/docs/presentation/girlspowertech/girlspowertech.tex
@@ -515,6 +515,19 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Handouts}
+  \framesubtitle{A little homework}
+  \begin{center}
+    \begin{itemize}
+    \item You can follow along at home
+    \item Learning to do by doing
+    \item Fill out the questions
+    \item Share your answers with the group
+    \end{itemize}
+  \end{center}
+\end{frame}
+
+\begin{frame}
   \frametitle{Questions?}
   \framesubtitle{No such thing as a silly question!}
   \begin{center}
